# -s6

./: .env  .env.example  .gitignore  ADMIN_GUIDE.md  ADMIN_GUIDE_RUNBOOK.md  ADMIN_GUIDE_UPDATE_SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW_SUMMARY.md  ARCHITECTURE_STATUS.md  AUTH_BACKEND_COMPLETE.md  AUTH_FINAL_DELIVERABLES.md  AUTH_IMPLEMENTATION_STATUS.md  BACKUP_RESTORE.md  CC.md  CHANGE_LOG.md  CODE_AND_DOCS_REVIEW_COMPLETE.md  DJANGO_FRONTEND_COMPLETE.md  FLOW_ENGINE_SUMMARY.md  FRONTEND_COMPLETE_SUMMARY.md  FRONTEND_IMPLEMENTATION_STATUS.md  FRONTEND_QUICKSTART.md  FRONTEND_WORKLOG_INTEGRATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  METRICS_DASHBOARD_CHANGELOG.md  METRICS_FINAL_REPORT.md  METRICS_IMPLEMENTATION_STATUS.md  PHASE2_STATUS.md  README.md  SESSION_10_SUMMARY.md  SESSION_11_FINAL_SUMMARY.md  SESSION_13_DAG_VERIFICATION_COMPLETE.md  SESSION_SUMMARY.md  TASK_COMPLETION_REPORT.md  TESTING_GUIDE.md  Taskfile.yml  WORKLOG_FIX_GUIDE.md  docker-compose.backend.yml  docker-compose.frontend.yml  docker-compose.registry.yml  (+2 more)
backend/: .env.example  .gitignore  ARCHITECTURE_REVIEW.md  Dockerfile  README.md  SYSTEM_DESIGN.md  docker-compose.yml  pyproject.toml  pytest.txt  schema_updated.yml  tool_context.md
backend/apps/accounts/: admin.py  models.py  serializers.py  services.py  signals.py
backend/apps/agents/: base.py  report_agent.py  resume_agent.py  skill_agent.py  worklog_agent.py
backend/apps/api/: env_validation.py  feature_flags.py  permissions.py  rate_limiting.py  security_middleware.py  service_auth.py  urls.py
backend/apps/artifacts/: __init__.py  models.py  selectors.py  (+2 more)
backend/config/: asgi.py  urls.py  wsgi.py
backend/docs/: IMPLEMENTATION_SUMMARY.md  USER_GUIDE.md
backend/frontend/: README.md  __init__.py  apps.py  tests.py  urls.py  views.py
backend/scripts/: bootstrap.py  create_admin.py  seed_demo_data.py
backend/tests/: conftest.py  test_api.py  test_gamification.py  test_jobs.py  test_phase2_features.py  test_phase3_features.py  test_phase4_features.py  test_system_capabilities.py  test_workflows.py  test_worklog_api_hierarchy.py  test_worklog_comprehensive.py  test_worklog_hierarchy.py
frontend/: .dockerignore  .env  Caddyfile  Dockerfile  Dockerfile.prod  IMPLEMENTATION_STATUS.md  README.container.md  README.md  THEME_SYNC.md  components.d.ts  db.sqlite3  docker-compose.yml  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  pyproject.toml  vite.config.ts  vitest.config.js
frontend/config/: asgi.py  urls.py  wsgi.py
frontend/server/: index.js
frontend/src/: App.vue  main.js
frontend/templates/: base.html  base_shell.html
frontend/tests/: apiClient.test.js  authFlow.test.js  commandParser.test.js  messages.test.js  test_theme_drift.py
frontend/traefik/: acme.json
(+298 files in other folders)
