[project]
name = "afterresume-backend"
version = "0.1.0"
description = "AfterResume Backend - AI-powered work tracking and resume generation"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.14",
    "psycopg2-binary>=2.9",
    "huey>=2.5",
    "redis>=5.0",
    "python-dotenv>=1.0",
    "pydantic>=2.5",
    "croniter>=2.0",
    "docker>=6.0",
    "django-allauth>=0.57",
    "minio>=7.2",
    "pillow>=10.0",
    "dj-database-url>=2.1",
    "stripe>=7.0",
    "django-ratelimit>=4.1",
    "djangorestframework-simplejwt>=5.3",
    "drf-spectacular>=0.29.0",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "chromadb>=0.4.24",
    "requests (>=2.32.5,<3.0.0)",
    "django-huey (>=1.3.1,<2.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-django>=4.7",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
