# Frontend dependencies
[project]
name = "afterresume-frontend"
version = "0.1.0"
description = "AfterResume Frontend - Django + HTMX UI"
requires-python = ">=3.10"
dependencies = [
    "django>=4.2,<5.0",
    "django-htmx>=1.17.0",
    "django-redis>=5.4.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-django>=4.5.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
